# cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
cmake/toolchains/: mingw64.cmake  osxcross.cmake
include/: Circle.hpp  Color.hpp  Matrix.hpp  PngCodec.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp  lodepng.h  stb_image_write.h
scripts/: build-all.sh  build-linux.sh  build-macos.sh  build-windows.ps1
src/: Circle.cpp  Matrix.cpp  PngCodec.cpp  Rectangle.cpp  Triangle.cpp  main.cpp
test/: diff.cpp  lodepng.c
